--- a/index.html
+++ b/index.html
@@ -629,11 +629,11 @@
                 </picture>
             </a>
             <nav class="nav-links">
-                <a href="#" data-i18n="nav.home">首页</a>
+                <a href="index.html" class="active" data-i18n="nav.home">首页</a>
                 <a href="x7_ai.html" data-i18n="nav.x7_ai">Panshaker X7</a>
+                <a href="service.html" data-i18n="nav.service">服务</a>
                 <a href="synapse_os.html" data-i18n="nav.synapse">PanOS</a>
                 <a href="about.html" data-i18n="nav.about">关于我们</a>
-                <a href="https://www.xinchushi.com/service" data-i18n="nav.service">服务</a>
                 <a href="#" data-i18n="nav.contact">联系我们</a>
             </nav>
         </div>
@@ -781,7 +781,7 @@
             <h1 data-i18n-html="home.hero.title">AI 赋能下低人工成本<br><strong>商业中餐解决方案</strong></h1>
             <p data-i18n="home.hero.subtitle" style="max-width: 800px; margin: 30px auto 40px; opacity: 0.9;">融合硬件自动化与
                 AI 智能系统，重新定义餐饮行业效率</p>
-            <a href="https://www.xinchushi.com/service" data-i18n="home.hero.cta"
+            <a href="service.html" data-i18n="home.hero.cta"
                 style="display:inline-block; padding: 16px 48px; background:#62BA46; color:#fff; border-radius:30px; font-size:17px; pointer-events: auto; font-weight: 500; box-shadow: 0 8px 24px rgba(98, 186, 70, 0.3); transition: all 0.4s;"
                 onmouseenter="this.style.background='#0E427E'; this.style.transform='translateY(-3px)'; this.style.boxShadow='0 12px 32px rgba(14, 66, 126, 0.4)'"
                 onmouseleave="this.style.background='#62BA46'; this.style.transform='translateY(0)'; this.style.boxShadow='0 8px 24px rgba(98, 186, 70, 0.3)'">
