--- a/profile_xu.html
+++ b/profile_xu.html
@@ -205,9 +205,9 @@
             <nav class="nav-links">
                 <a href="index.html" data-i18n="nav.home">首页</a>
                 <a href="x7_ai.html" data-i18n="nav.x7_ai">Panshaker X7</a>
+                <a href="service.html" data-i18n="nav.service">服务</a>
                 <a href="synapse_os.html" data-i18n="nav.synapse">PanOS</a>
                 <a href="about.html" data-i18n="nav.about">关于我们</a>
-                <a href="https://www.xinchushi.com/service" data-i18n="nav.service">服务</a>
                 <a href="#" data-i18n="nav.contact">联系我们</a>
             </nav>
         </div>
