--- a/service.html
+++ b/service.html
@@ -5,21 +5,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
-    <title>X7-AI Robot | Panshaker Services</title>
+    <title>Services | Panshaker Services</title>
     <meta name="description"
-        content="Explore the X7-AI Robot by Panshaker Services — intelligent cooking automation powered by AI.">
+        content="Explore the full range of services offered by Panshaker Services — automated cooking solutions, hardware installation, maintenance and more.">
     <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" href="favicon.ico" sizes="any">
     <!-- SEO: Canonical -->
-    <link rel="canonical" href="https://www.panshaker.com/x7_ai.html">
+    <link rel="canonical" href="https://www.panshaker.com/service.html">
     <!-- SEO: Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="X7-AI Robot | Panshaker Services — Intelligent Cooking Automation">
+    <meta property="og:title" content="Services | Panshaker Services">
     <meta property="og:description"
-        content="Explore the X7-AI Robot by Panshaker Services — intelligent cooking automation powered by AI.">
-    <meta property="og:url" content="https://www.panshaker.com/x7_ai.html">
+        content="Explore the full range of services offered by Panshaker Services — automated cooking solutions, hardware installation, maintenance and more.">
+    <meta property="og:url" content="https://www.panshaker.com/service.html">
     <meta property="og:site_name" content="Panshaker Services">
     <meta property="og:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
@@ -69,8 +69,8 @@
             </a>
             <nav class="nav-links">
                 <a href="index.html" data-i18n="nav.home">首页</a>
-                <a href="x7_ai.html" class="active" data-i18n="nav.x7_ai">Panshaker X7</a>
-                <a href="service.html" data-i18n="nav.service">服务</a>
+                <a href="x7_ai.html" data-i18n="nav.x7_ai">Panshaker X7</a>
+                <a href="service.html" class="active" data-i18n="nav.service">服务</a>
                 <a href="synapse_os.html" data-i18n="nav.synapse">PanOS</a>
                 <a href="about.html" data-i18n="nav.about">关于我们</a>
                 <a href="#" data-i18n="nav.contact">联系我们</a>
@@ -79,7 +79,7 @@
     </header>
 
     <div class="iframe-wrapper">
-        <iframe src="https://www.xinchushi.com/product" title="X7-AI Robot Product" allowfullscreen loading="lazy">
+        <iframe src="https://www.xinchushi.com/service" title="Panshaker Services" allowfullscreen loading="lazy">
         </iframe>
     </div>
 
