--- a/investors.html
+++ b/investors.html
@@ -100,7 +100,7 @@
                 <a href="service.html" data-i18n="nav.service">服务</a>
                 <a href="synapse_os.html" data-i18n="nav.synapse">PanOS</a>
                 <a href="about.html" data-i18n="nav.about">关于我们</a>
-                <a href="#" data-i18n="nav.contact">联系我们</a>
+                <a href="contact.html" data-i18n="nav.contact">联系我们</a>
             </nav>
         </div>
     </header>
@@ -139,7 +139,7 @@
                 <div class="footer-col">
                     <h4 data-i18n="footer.contact_title">联系方式</h4>
                     <ul>
-                        <li data-i18n="footer.email">Email: contact@panshaker.com</li>
+                        <li><a href="mailto:contact@panshaker.com"><span data-i18n="footer.email">Email: contact@panshaker.com</span></a></li>
                         <li data-i18n="footer.location">Location: San Diego, CA</li>
                     </ul>
                 </div>
