--- a/synapse_os.html
+++ b/synapse_os.html
@@ -1985,7 +1985,7 @@
             <p data-i18n="synapse.cta.desc" style="font-size: 20px; margin-bottom: 40px; color: rgba(255,255,255,0.9);">
                 快速演示 — 我们将为您详细介绍如何为您的业务量身定制
             </p>
-            <a href="about.html" class="btn" data-i18n="synapse.cta.button"
+            <a href="contact.html" class="btn btn-blue" data-i18n="synapse.cta.button"
                 style="background: #fff; color: var(--brand-blue); font-size: 17px; padding: 14px 32px; display: inline-block;">联系我们</a>
             <p data-i18n="synapse.cta.tip" style="font-size: 14px; margin-top: 20px; color: rgba(255,255,255,0.7);">
                 温馨提示：我们只专注服务北美地区的餐饮企业
