--- a/contact.html
+++ b/contact.html
@@ -241,28 +241,27 @@
             <div class="contact-form-wrapper">
                 <form id="contactForm" action="mailto:contact@panshaker.com" method="post" enctype="text/plain">
                     <div class="form-group">
-                        <label for="name" data-i18n="contact.name">Name / 姓名</label>
+                        <label for="name" data-i18n="contact.name">姓名</label>
                         <input type="text" id="name" name="name" class="form-control" required
-                            data-i18n-placeholder="contact.name_ph" placeholder="Enter your full name">
+                            data-i18n-placeholder="contact.name_ph" placeholder="请输入您的姓名">
                     </div>
 
                     <div class="form-group">
-                        <label for="email" data-i18n="contact.email">Email / 邮箱</label>
+                        <label for="email" data-i18n="contact.email">邮箱</label>
                         <input type="email" id="email" name="email" class="form-control" required
-                            data-i18n-placeholder="contact.email_ph" placeholder="Enter your email address">
+                            data-i18n-placeholder="contact.email_ph" placeholder="请输入您的邮箱地址">
                     </div>
 
                     <div class="form-group">
-                        <label for="phone" data-i18n="contact.phone">Phone / 电话</label>
+                        <label for="phone" data-i18n="contact.phone">电话</label>
                         <input type="tel" id="phone" name="phone" class="form-control"
-                            data-i18n-placeholder="contact.phone_ph" placeholder="Enter your phone number">
+                            data-i18n-placeholder="contact.phone_ph" placeholder="请输入您的电话号码（选填）">
                     </div>
 
                     <div class="form-group">
-                        <label for="region" data-i18n="contact.region">Region / 区域</label>
+                        <label for="region" data-i18n="contact.region">区域</label>
                         <select id="region" name="region" class="form-control" required>
-                            <option value="" disabled selected data-i18n="contact.region_select">Select your region /
-                                选择区域</option>
+                            <option value="" disabled selected data-i18n="contact.region_select">选择区域</option>
                             <optgroup label="United States">
                                 <option value="AL">Alabama</option>
                                 <option value="AK">Alaska</option>
@@ -325,13 +324,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="description" data-i18n="contact.description">Description / 需求描述</label>
+                        <label for="description" data-i18n="contact.description">需求描述</label>
                         <textarea id="description" name="description" class="form-control" required
-                            data-i18n-placeholder="contact.desc_ph"
-                            placeholder="Tell us about your needs..."></textarea>
+                            data-i18n-placeholder="contact.desc_ph" placeholder="请描述您的需求..."></textarea>
                     </div>
 
-                    <button type="submit" class="submit-btn" data-i18n="contact.submit">Submit / 提交</button>
+                    <button type="submit" class="submit-btn" data-i18n="contact.submit">提交</button>
                 </form>
             </div>
         </div>
